Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36526

QSerialPortInfo::availablePorts() does not return "Virtual Serial Ports Emulator" com ports on windows

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • 5.3.0
    • 5.2.0
    • Serial Port
    • None
    • Windows

    Description

      On Windows, QSerialPortInfo::availablePorts() does not returns the com ports created by "Virtual Serial Ports Emulator" (http://www.eterlogic.com/Products.VSPE.html). These com ports are not shown in the device manager, but they are listed in the registry HKEY_LOCAL_MACHINE\HARDWARE\DEVICEMAP\SERIALCOMM and can be opened, written, read and close, without problem.

      Attachments

        For Gerrit Dashboard: QTBUG-36526
        # Subject Branch Project Status CR V

        Activity

          People

            kuzulis Denis Shienkov
            ericlemanissier Eric Lemanissier
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes